# CourseWork

./: README.md
CourseWork/: CMakeLists.txt  clientchoose.cpp  clientchoose.h  clientchoose.ui  database.db  database.sqbpro  fri.cpp  fri.h  fri.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mon.cpp  mon.h  mon.ui  sat.cpp  sat.h  sat.ui  secondwindow.cpp  secondwindow.h  secondwindow.ui  sun.cpp  sun.h  sun.ui  thu.cpp  thu.h  thu.ui  tue.cpp  tue.h  tue.ui  wed.cpp  wed.h  wed.ui  worktime.cpp  worktime.h  worktime.ui
